[package]
name = "webhook-flows-macros"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Webhook Integration macros for flows.network"
documentation = "https://docs.rs/webhook-flows-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
rand = "0.8.5"
serde_json = "1"
syn = { version = "2.0", features = ["full"] }

